annotations, wrapper and tests

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java-library'
 dependencies {
-    implementation 'org.projectlombok:lombok:1.16.18'
+    implementation 'org.projectlombok:lombok:1.18.0'
+    compile 'org.slf4j:slf4j-api:1.7.25'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
